--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "author": "João Vitor Sobanski",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/config": "^3.3.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/http-status-codes": "^1.2.0",
     "@types/jest": "^28.1.7",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/module-alias": "^2.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.6",
@@ -36,10 +39,13 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "config": "^3.3.7",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "pino": "^8.4.1"
   }
