--- a/package.json
+++ b/package.json
@@ -27,18 +27,17 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.6",
     "@types/pino": "^7.0.5",
-    "@types/supertest": "~2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
     "eslint": "^8.22.0",
     "jest": "^28.1.3",
-    "supertest": "~6.2.4",
     "ts-jest": "^28.0.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
+    "@types/moment": "^2.13.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "config": "^3.3.7",
@@ -46,6 +45,7 @@
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "pino": "^8.4.1"
   }
