--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+dist*
 # Runtime data
 pids
 *.pid
@@ -61,4 +61,4 @@ typings/
 .next
 
 # typescript compiled code
-dist/
+# dist/
