--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "typescript-api",
+  "name": "sarah-tarkin-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && node dist/src/index.js",
-    "dev": "ts-node-dev --transpile-only src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test:functional": "jest --projects ./test --forceExit --runInBand",
-    "test:unit": "jest",
-    "lint": "eslint ./src ./test --ext .ts",
-    "lint:fix": "eslint ./src ./test --ext .ts --fix"
+    "start": "yarn build && ts-node -r tsconfig-paths/register build/src/index.js",
+    "dev": "nodemon",
+    "test": "ts-node-dev -r tsconfig-paths/register --transpile-only build/src/index.js"
   },
   "author": "João Vitor Sobanski",
   "license": "MIT",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/config": "^3.3.0",
+    "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/http-status-codes": "^1.2.0",
@@ -38,16 +35,21 @@
   "dependencies": {
     "@overnightjs/core": "^1.7.6",
     "@types/moment": "^2.13.0",
-    "bcrypt": "^5.0.1",
+    "@types/pino-pretty": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
-    "pino": "^8.4.1"
+    "nodemon": "^2.0.20",
+    "pino": "^8.4.1",
+    "pino-pretty": "^9.1.1",
+    "tsconfig-paths": "^4.1.1"
   }
 }
